<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_channel_description">This is description of notification channel</string>

    <string name="notification_title_udacity">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_udacity">The Project 3 repository is downloaded</string>
    <string name="notification_title_glide">Glide: Image Loading Library</string>
    <string name="notification_description_glide">Glide repository is downloaded</string>
    <string name="notification_title_retrofit">Retrofit: Services helps get API</string>
    <string name="notification_description_retrofit">Retrofit repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_download_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_download_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="success">success</string>
</resources>
