<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04136253" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96107054" />

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cloud_download_24"
            android:background="@color/color_background_download_image"
            />

        <RadioGroup
            android:id="@+id/download_option_radio_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/margin_normal"
            app:layout_constraintBottom_toTopOf="@+id/loading_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner_image"
            >

            <RadioButton
                android:id="@+id/glide_rb"
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glide_download_text"
                />

            <RadioButton
                android:id="@+id/udacity_rb"
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/load_app_download_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />

            <RadioButton
                android:id="@+id/retrofit_rb"
                style="@style/Widget.LoadingStatus.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_download_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />
        </RadioGroup>

        <com.udacity.custom_button.CustomLoadingButton
            android:id="@+id/loading_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:loadingDefaultBackgroundColor="?attr/colorPrimary"
            app:loadingBackgroundColor="?attr/colorPrimaryDark"
            app:loadingDefaultText="@string/download"
            app:loadingText="@string/button_loading"
            app:loadingTextColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>